--- a/package.json
+++ b/package.json
@@ -49,16 +49,16 @@
     "test": "npm run standard && npm run coverage",
     "unit": "tape test/*.js"
   },
-  "dependencies": {
-    "bs58check": "^4.0.0"
-  },
   "devDependencies": {
-    "@types/node": "^20.14.2",
-    "c8": "^10.1.2",
-    "rimraf": "^5.0.7",
-    "tape": "^5.3.0",
+    "@types/node": "^25.2.3",
+    "c8": "^10.1.3",
+    "rimraf": "^6.1.3",
+    "tape": "^5.9.0",
     "ts-standard": "^12.0.2",
-    "typescript": "^5.4.5",
-    "uint8array-tools": "0.0.7"
+    "typescript": "^5.9.3",
+    "uint8array-tools": "0.0.9"
+  },
+  "dependencies": {
+    "@btc-vision/bs58check": "^5.0.0"
   }
 }
