Add CI, templates, linting & TypeScript
Add repository scaffolding and CI: GitHub Actions publish/release workflow, Dependabot, changelog config, issue and PR templates. Introduce linting/formatting configs (eslint.config.js, .prettierrc.json), vitest config, TypeScript entry (src/index.ts) and a test (test/index.test.ts). Remove legacy built CJS/ESM and ts_src artifacts and replace old main_ci workflow; update .gitignore and adjust package.json/tsconfig.json. These changes set up CI/CD, dependency updates, code quality and a TypeScript-first development workflow.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,36 @@
 {
-    "extends": "./tsconfig.base.json",
     "compilerOptions": {
-      "outDir": "src/esm",
-      "esModuleInterop": true,
-      "resolveJsonModule": true,
-      "module": "ESNext",
-      "moduleResolution": "Node"
+        "module": "ESNext",
+        "target": "ESNext",
+        "declaration": true,
+        "outDir": "./build",
+        "moduleResolution": "bundler",
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "allowSyntheticDefaultImports": true,
+        "resolveJsonModule": true,
+        "moduleDetection": "force",
+        "sourceMap": false,
+        "strict": true,
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        "strictFunctionTypes": true,
+        "strictBindCallApply": true,
+        "strictPropertyInitialization": true,
+        "alwaysStrict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "removeComments": true,
+        "lib": [
+            "ESNext"
+        ]
     },
+    "include": [
+        "src/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules",
+        "build",
+        "test"
+    ]
 }
-  
