--- a/package.json
+++ b/package.json
@@ -1,64 +1,74 @@
 {
-  "name": "wif",
-  "version": "5.0.0",
-  "description": "Bitcoin Wallet Import Format (WIF) decoding/encoding module",
-  "author": "Daniel Cousens",
-  "type": "module",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bitcoinjs/wif.git"
-  },
-  "bugs": {
-    "url": "https://github.com/bitcoinjs/wif/issues"
-  },
-  "homepage": "https://github.com/bitcoinjs/wif",
-  "keywords": [
-    "bitcoin",
-    "base58",
-    "base58check",
-    "decode",
-    "decoding",
-    "encoding",
-    "encode",
-    "key",
-    "private",
-    "wif"
-  ],
-  "main": "src/cjs/index.cjs",
-  "module": "src/esm/index.js",
-  "types": "src/cjs/index.d.ts",
-  "exports": {
-    ".": {
-      "require": "./src/cjs/index.cjs",
-      "import": "./src/esm/index.js",
-      "types": "./src/cjs/index.d.ts"
+    "name": "@btc-vision/wif",
+    "type": "module",
+    "version": "6.0.0",
+    "description": "Bitcoin Wallet Import Format (WIF) encoding/decoding module",
+    "engines": {
+        "node": ">=24.0.0"
+    },
+    "exports": {
+        ".": {
+            "types": "./build/index.d.ts",
+            "import": "./build/index.js",
+            "default": "./build/index.js"
+        }
+    },
+    "keywords": [
+        "bitcoin",
+        "base58",
+        "base58check",
+        "decode",
+        "decoding",
+        "encoding",
+        "encode",
+        "key",
+        "private",
+        "wif"
+    ],
+    "homepage": "https://github.com/btc-vision/wif",
+    "bugs": {
+        "url": "https://github.com/btc-vision/wif/issues"
+    },
+    "license": "MIT",
+    "author": "Daniel Cousens",
+    "files": [
+        "build"
+    ],
+    "main": "build/index.js",
+    "types": "build/index.d.ts",
+    "module": "build/index.js",
+    "publishConfig": {
+        "access": "public",
+        "tag": "latest"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/btc-vision/wif.git"
+    },
+    "scripts": {
+        "build": "eslint src && tsc",
+        "clean": "rimraf build",
+        "test": "npm run build && vitest run",
+        "test:watch": "vitest",
+        "test:coverage": "npm run build && vitest run --coverage",
+        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+        "format:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
+        "lint": "eslint src",
+        "typecheck": "tsc --noEmit",
+        "prebuild": "npm run clean"
+    },
+    "dependencies": {
+        "@btc-vision/bs58check": "^5.0.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.39.2",
+        "@noble/hashes": "^2.0.1",
+        "@types/node": "^25.2.3",
+        "eslint": "^9.39.2",
+        "prettier": "^3.5.3",
+        "rimraf": "^6.1.3",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.55.0",
+        "vitest": "^4.0.18"
     }
-  },
-  "files": [
-    "src"
-  ],
-  "scripts": {
-    "build": "npm run clean && tsc -p ./tsconfig.json && tsc -p ./tsconfig.cjs.json; npm run standard -- --fix",
-    "clean": "rimraf src",
-    "postbuild": "find src/cjs -type f -name \"*.js\" -exec bash -c 'mv \"$0\" \"${0%.js}.cjs\"' {} \\;",
-    "gitdiff": "npm run build && git diff --exit-code",
-    "coverage-report": "c8 report --reporter=lcov",
-    "coverage": "c8 --check-coverage --branches 90 --functions 90 npm run unit",
-    "standard": "ts-standard --ignore src --ignore test",
-    "test": "npm run standard && npm run coverage",
-    "unit": "tape test/*.js"
-  },
-  "devDependencies": {
-    "@types/node": "^25.2.3",
-    "c8": "^10.1.3",
-    "rimraf": "^6.1.3",
-    "tape": "^5.9.0",
-    "ts-standard": "^12.0.2",
-    "typescript": "^5.9.3",
-    "uint8array-tools": "0.0.9"
-  },
-  "dependencies": {
-    "@btc-vision/bs58check": "^5.0.0"
-  }
 }
